using UnityEngine;

public class CONSTANT
{
    public static string ANIMATION_MOVE_X = "moveX";
    public static string ANIMATION_MOVE_Y = "moveY";
    public static string ANIMATION_BOOSTING = "boosting";

    public static string OBSERVER_PLAYERDEATH = "playerDeath";
    public static string OBSERVER_PLAYERHIT = "playerHit";
}
